--- a/.doc/hotkey/0.70.md
+++ b/.doc/hotkey/0.70.md
@@ -1,115 +1,113 @@
 # 快捷键(70版本)
 ! 未特别标注的Ctrl/Alt/Shift快捷键默认为左Ctrl/左Alt/左Shift
 
-| 按键 | 对应功能 | 对应MOD | 注释 |    
-|--|--|--|--|    
-| A | 配方视图 | Item Scroller | 背包/工作台 |  
-| A + C | malilib配置界面 | malilib | - |   
-| C | 灵魂出窍 | Tweakeroo | - |  
-| D + E | 方块放置间距 | Tweakeroo | - |  
-| F | 切换左右手 | Minecraft | - |  
-| G | 工具武器自动选择开关 | Tweakeroo | - |  
-| G + C | MasaGadget配置界面 | MasaGadget | - |  
-| H | MiniHub主开关 | MiniHub | - |   
-| H + C | MiniHub配置界面 | MiniHub | - |  
-| H + G | 结构渲染器 | MiniHub | - |  
-| I | 方块信息 | Litematica | - |  
-| I+C | 物品滚轮配置界面 | Item Scroller | - |  
-| J | 同步方块/背包 | Tweak My Client | - |   
-| J(长按) | 通过大量发包防止幽灵方块 | AntiGhost | - |  
-| K + C | TweakerMore配置界面 | TweakerMore | - |    
-| K | 右下角的开关耐久显示 | Giselbaers Durability Viewer | - |  
-| M | 投影主界面 | Litematica | - |  
-| M + A | 添加投影选区 | Litematica | - |  
-| M + L | 投影材料界面 | Litematica | - |  
-| M + P | 管理原理图放置 | Litematica | - |  
-| M + V | 原理图验证器 | Litematica | - |  
-| M + S | 区域选择管理器 | Litematica | - |   
-| M + C | 配置菜单 | Litematica | - |    
-| M + G | 投影方块渲染 | Litematica | - |    
-| M + T | 工具切换 | Litematica | - |  
-| M + page_UP | 下一渲染模式 | Litematica | - |  
-| M + page_DOWN | 上一渲染模式 | Litematica | - |  
-| M + Button_3(鼠标中间按钮) | 选择方块开关 | Litematica | - |  
-| N | 大地图 | XaerosWorldMap | 小地图设置可以在大地图左上角里找到 |  
-| O + C | OMMC配置界面 | Oh My Minecraft Client | - |  
-| P | 清空Pistorder显示 | Pistorder | - |  
-| Q + Button_1(鼠标左按钮) | 就扔一个 | Item Scroller | - |  
-| R | 整理仓库 | OMMC | - |  
-| R+C | 额外玩家渲染配置界面 | ExtraPlayerRenderer | - |  
-| S + Button_1(鼠标左按钮) | 就下移一个 | Item Scroller | - |   
-| S + Button_2(鼠标右按钮) | 就移一个S | Item Scroller | - |  
-| T | 打开聊天栏 | Minecraft | - |  
-| T + C | Tweak My Client配置界面 | Tweak My Client | - |    
-| U | 简单放置模式 | Litematica | - |
-| Z + 1 | 方块放置限制 平面 | Tweakeroo | - |  
-| Z + 2 | 方块放置限制 面朝 | Tweakeroo | - |  
-| Z + 3 | 方块放置限制 直线 | Tweakeroo | - |  
-| Z + 4 | 方块放置限制 陵边 | Tweakeroo | - |  
-| Z + 5 | 方块放置限制 对角边 | Tweakeroo | - |  
-| Z + 6 | 方块放置限制 水平面 | Tweakeroo | - |  
-| W + Button_1(鼠标左按钮) | 就上移一个 | Item Scroller | - |  
-| W + Button_2(鼠标右按钮) | 就剩一个W | Item Scroller | - |  
-| X + A | Xaero Map Addition配置界面 | Xaero Map Addition | - |      
-| ; | 选择需要查找的实体| Entity Outliner | - |  
-| enter | 执行键 | Litematica | - |  
-| UP | 下一渲染层 | Litematica | - |    
-| DOWN | 上一渲染层 | Litematica | - |   
-| Tab+X | 开关空中放置功能 | Tweakeroo | - |  
-| Tab+~ | 查看玩家角度 | Tweakeroo | 用于鞘翅飞行时 |  
-| Alt | 方块灵活放置 | Tweakeroo | - |  
-| Alt | 创造模式提取方块带方块状态 | TweakerMore | - |  
-| Alt | 移动相同 | Item Scroller | - |  
-| Alt | 位移调节器 | Litematica | - |   
-| Alt | 主方块选择 | Litematica | - |   
-| Alt + S + Button_1(鼠标左按钮) | 全部下移 | Item Scroller | - |  
-| Alt + W + Button_1(鼠标左按钮) | 全部上移 | Item Scroller | - |     
-| Alt + Shift | 移动所有 | Item Scroller | - |   
-| Alt + Shift + Button_1(鼠标左按钮) | 移动所有 | Item Scroller | - |   
-| Alt + Button_1(鼠标左按钮) | 全部移动 | Item Scroller | - |     
-| Shift | 潜行 | Minecraft | - |   
-| Shift | 移动一份 | Item Scroller | - |   
-| Shift | 交易收藏  | Item Scroller | - |   
-| Shift | 副方块选择 | Litematica | - |   
-| Shift + Q + Button_1(鼠标左按钮) | 扔一份 | Item Scroller | - |   
-| Shift + Q + Button_2(鼠标右按钮) | 丢到剩一个 | Item Scroller | - |   
-| Shift + S + Button_1(鼠标左按钮) | 下移一份 | Item Scroller | - |   
-| Shift + W + Button_1(鼠标左按钮) | 上移一份 | Item Scroller | - |   
-| Shift + Button_1(鼠标左按钮) | 移一份 | Item Scroller | - |  
-| Shift + Button_2(鼠标右按钮) | 就剩一个 | Item Scroller | - |    
-| Alt+Ctrl | 放置后点击 | Tweakeroo | - |  
-| Ctrl | 疾跑 | Minecraft | 可以看为开关强制疾跑键 |  
-| Ctrl | 投影模式切换 | Litematica | 仅手持木棍 |  
-| Ctrl + C | 全部制作 | Item Scroller | - |  
-| Ctrl + L | 工作台放置 | Item Scroller | - |   
-| Ctrl + M | 选区模式选择 | Litematica | - |
-| Ctrl + Shift + C | 全部丢出 | Item Scroller | - |
-| Ctrl + Alt | 放置后点击 | Tweakeroo | - |    
-| Ctrl + Alt + C | 全部合成并抛出 | Item Scroller | - |  
-| Ctrl + Alt + S | 将原理图存至文件 | Litematica | - |  
-| Ctrl + Alt + Shift + I | 物品滚轮调试栏 | Item Scroller | - |  
-| Ctrl + Button_1(鼠标左按钮) | 就移一个 | Item Scroller | - |   
-| 右Ctrl | 原理图透视渲染 | Litematica | - |  
-| Button_1(鼠标左按钮) | 角点1放置 | Litematica | - |  
-| Button_2(鼠标右按钮) | 角点2放置 | Litematica | - |
-| Button_2(鼠标右按钮) | 简单放置应用 | Litematica | - |  
-| Button_3(鼠标中间按钮) | 区域选择 | Litematica | - |
-| Button_3(鼠标中间按钮) | 储存配方 | Item Scroller | - |  
-| Button_3(鼠标中间按钮) | 选择当前方块 | Litematica | - |  
-| F2 | 查看其他玩家/自己的背包和潜影盒内物品 | 推客入 | - |  
-| F3 | MINECRAFT信息 | Minecraft | - |    
-| F3 + M | 重载原理图 | Litematica | - |  
-| F5 | 切换视角 | Minecraft | - |  
-| F6 | 寻路更新显示 | MiniHub | - |  
-| F7 | 出生点加载显示 | MiniHub | - |  
-| F8 | 光照等级显示 | MiniHub | - |  
-| F11 | 全屏显示切换 | Minecraft | - |    
-| kp7 | 背包栏顶层切换 | 推客入 | - |  
-| kp4 | 背包中层切换 | 推客入 | - |  
-| kp1 | 背包底层切换 | 推客入 | - |  
-| kp8 | 飞行预设1 | 推客入 | 速度0.064 |  
-| kp5 | 飞行预设2 | 推客入 | 速度0.128 |  
-| kp2 | 飞行预设3 | 推客入 | 速度0.2 |  
-| kp0 | 飞行预设4 | 推客入 | 速度0.32 |   
-| kp_subtract(数字面板"-") | 配置原理图放置 | Litematica | - |  
-| kp_multiply(数字面板"*") | 区域编辑器 | Litematica | - |  
+| 按键 | 对应功能 | 对应MOD | 注释/使用场景 |
+|--|--|--|--|
+| A | 配方视图 | Item Scroller(I+C) | 背包/工作台 |
+| C | 灵魂出窍 | Tweakeroo(X+C) | - |
+| D + E | 方块放置间距 | Tweakeroo(X+C) | - |
+| F | 切换左右手 | Minecraft(ModMenu)(-) | - |
+| G | 工具武器自动选择开关 | Tweakeroo(X+C) | - |
+| G + C | MasaGadget配置界面 | MasaGadget(G+C) | - |      
+| H | MiniHub(H+C)主开关 | MiniHub(H+C) | - |
+| H + G | 结构渲染器 | MiniHub(H+C) | - |
+| I | 方块信息 | Litematica(M+C) | - |
+| I+C | 物品滚轮配置界面 | Item Scroller(I+C) | - |
+| J | 同步方块/背包 | Tweak My Client(T+C) | - |
+| J(长按) | 通过大量发包防止幽灵方块 | AntiGhost(ModMenu) | - |
+| K + C | TweakerMore配置界面 | TweakerMore(K+C) | - |
+| K | 右下角的开关耐久显示 | Giselbaers Durability Viewer(ModMenu) | - |
+| M | 投影主界面 | Litematica(M+C) | - |
+| M + A | 添加投影选区 | Litematica(M+C) | - |
+| M + L | 投影材料界面 | Litematica(M+C) | - |
+| M + P | 管理原理图放置 | Litematica(M+C) | - |
+| M + V | 原理图验证器 | Litematica(M+C) | - |
+| M + S | 区域选择管理器 | Litematica(M+C) | - |
+| M + C | 配置菜单 | Litematica(M+C) | - |
+| M + G | 投影方块渲染 | Litematica(M+C) | - |
+| M + T | 工具切换 | Litematica(M+C) | - |
+| M + page_UP | 下一渲染模式 | Litematica(M+C) | - |
+| M + page_DOWN | 上一渲染模式 | Litematica(M+C) | - |
+| M + Button_3(鼠标中间按钮) | 选择方块开关 | Litematica(M+C) | - |
+| N | 大地图 | XaerosWorldMap((ModMenu)) | 小地图设置可以在大地图左上角里找到 |
+| O + C | OMMC配置界面 | Oh My Minecraft(ModMenu) Client(O+C) | - |
+| P | 清空Pistorder(-)显示 | Pistorder(-) | - |
+| Q + Button_1(鼠标左按钮) | 就扔一个 | Item Scroller(I+C) | - |
+| R | 整理仓库 | Oh My Minecraft(ModMenu) Client(O+C) | - |
+| R+C | 额外玩家渲染配置界面 | ExtraPlayerRenderer(R+C) | - |
+| S + Button_1(鼠标左按钮) | 就下移一个 | Item Scroller(I+C) | - |
+| S + Button_2(鼠标右按钮) | 就移一个S | Item Scroller(I+C) | - |
+| T | 打开聊天栏 | Minecraft(ModMenu) | - |
+| T + C | Tweak My Client配置界面 | Tweak My Client(T+C) | - |
+| U | 简单放置模式 | Litematica(M+C) | - |
+| Z + 1 | 方块放置限制 平面 | Tweakeroo(X+C) | - |
+| Z + 2 | 方块放置限制 面朝 | Tweakeroo(X+C) | - |
+| Z + 3 | 方块放置限制 直线 | Tweakeroo(X+C) | - |
+| Z + 4 | 方块放置限制 陵边 | Tweakeroo(X+C) | - |
+| Z + 5 | 方块放置限制 对角边 | Tweakeroo(X+C) | - |
+| Z + 6 | 方块放置限制 水平面 | Tweakeroo(X+C) | - |
+| W + Button_1(鼠标左按钮) | 就上移一个 | Item Scroller(I+C) | - |
+| W + Button_2(鼠标右按钮) | 就剩一个W | Item Scroller(I+C) | - |
+| X + A | Xaero Map Addition配置界面 | Xaero Map Addition(X+A) | - |
+| ; | 选择需要查找的实体| Entity Outliner(ModMenu) | - |
+| enter | 执行键 | Litematica(M+C) | - |
+| UP | 下一渲染层 | Litematica(M+C) | - |
+| DOWN | 上一渲染层 | Litematica(M+C) | - |
+| Tab+X | 开关空中放置功能 | Tweakeroo(X+C) | - |
+| Tab+~ | 查看玩家角度 | Tweakeroo(X+C) | 用于鞘翅飞行时 |
+| Alt | 方块灵活放置 | Tweakeroo(X+C) | - |
+| Alt | 创造模式提取方块带方块状态 | TweakerMore(K+C) | - |
+| Alt | 移动相同 | Item Scroller(I+C) | - |
+| Alt | 位移调节器 | Litematica(M+C) | - |
+| Alt | 主方块选择 | Litematica(M+C) | - |
+| Alt + S + Button_1(鼠标左按钮) | 全部下移 | Item Scroller(I+C) | - |
+| Alt + W + Button_1(鼠标左按钮) | 全部上移 | Item Scroller(I+C) | - |
+| Alt + Shift | 移动所有 | Item Scroller(I+C) | - |
+| Alt + Shift + Button_1(鼠标左按钮) | 移动所有 | Item Scroller(I+C) | - |
+| Alt + Button_1(鼠标左按钮) | 全部移动 | Item Scroller(I+C) | - |
+| Shift | 潜行 | Minecraft(ModMenu) | - |
+| Shift | 移动一份 | Item Scroller(I+C) | - |
+| Shift | 交易收藏  | Item Scroller(I+C) | - |
+| Shift | 副方块选择 | Litematica(M+C) | - |
+| Shift + Q + Button_1(鼠标左按钮) | 扔一份 | Item Scroller(I+C) | - |
+| Shift + Q + Button_2(鼠标右按钮) | 丢到剩一个 | Item Scroller(I+C) | - |
+| Shift + S + Button_1(鼠标左按钮) | 下移一份 | Item Scroller(I+C) | - |
+| Shift + W + Button_1(鼠标左按钮) | 上移一份 | Item Scroller(I+C) | - |
+| Shift + Button_1(鼠标左按钮) | 移一份 | Item Scroller(I+C) | - |
+| Shift + Button_2(鼠标右按钮) | 就剩一个 | Item Scroller(I+C) | - |
+| Alt+Ctrl | 放置后点击 | Tweakeroo(X+C) | - |
+| Ctrl | 疾跑 | Minecraft(ModMenu) | 可以看为开关强制疾跑键 |
+| Ctrl | 投影模式切换 | Litematica(M+C) | 仅手持木棍 |
+| Ctrl + C | 全部制作 | Item Scroller(I+C) | - |
+| Ctrl + L | 工作台放置 | Item Scroller(I+C) | - |
+| Ctrl + M | 选区模式选择 | Litematica(M+C) | - |
+| Ctrl + Shift + C | 全部丢出 | Item Scroller(I+C) | - |
+| Ctrl + Alt | 放置后点击 | Tweakeroo(X+C) | - |
+| Ctrl + Alt + C | 全部合成并抛出 | Item Scroller(I+C) | - |
+| Ctrl + Alt + S | 将原理图存至文件 | Litematica(M+C) | - |
+| Ctrl + Alt + Shift + I | 物品滚轮调试栏 | Item Scroller(I+C) | - |
+| Ctrl + Button_1(鼠标左按钮) | 就移一个 | Item Scroller(I+C) | - |
+| 右Ctrl | 原理图透视渲染 | Litematica(M+C) | - |
+| Button_1(鼠标左按钮) | 角点1放置 | Litematica(M+C) | - |
+| Button_2(鼠标右按钮) | 角点2放置 | Litematica(M+C) | - |
+| Button_2(鼠标右按钮) | 简单放置应用 | Litematica(M+C) | - |
+| Button_3(鼠标中间按钮) | 区域选择 | Litematica(M+C) | - |
+| Button_3(鼠标中间按钮) | 储存配方 | Item Scroller(I+C) | - |
+| Button_3(鼠标中间按钮) | 选择当前方块 | Litematica(M+C) | - |
+| F2 | 查看其他玩家/自己的背包和潜影盒内物品 | Tweakeroo(X+C) | - |
+| F3 | MINECRAFT信息 | Minecraft(ModMenu) | - |
+| F3 + M | 重载原理图 | Litematica(M+C) | - |
+| F5 | 切换视角 | Minecraft(ModMenu) | - |
+| F6 | 寻路更新显示 | MiniHub(H+C) | - |
+| F7 | 出生点加载显示 | MiniHub(H+C) | - |
+| F8 | 光照等级显示 | MiniHub(H+C) | - |
+| F11 | 全屏显示切换 | Minecraft(ModMenu) | - |
+| kp7 | 背包栏顶层切换 | Tweakeroo(X+C) | - |
+| kp4 | 背包中层切换 | Tweakeroo(X+C) | - |
+| kp1 | 背包底层切换 | Tweakeroo(X+C) | - |
+| kp8 | 飞行预设1 | Tweakeroo(X+C) | 速度0.064 |
+| kp5 | 飞行预设2 | Tweakeroo(X+C) | 速度0.128 |
+| kp2 | 飞行预设3 | Tweakeroo(X+C) | 速度0.2 |
+| kp0 | 飞行预设4 | Tweakeroo(X+C) | 速度0.32 |
+| kp_subtract(数字面板"-") | 配置原理图放置 | Litematica(M+C) | - |
+| kp_multiply(数字面板"*") | 区域编辑器 | Litematica(M+C) | - |
