快捷键列表纠正

--- a/.doc/hotkey/0.70.md
+++ b/.doc/hotkey/0.70.md
@@ -30,10 +30,10 @@
 | M + page_DOWN | 上一渲染模式 | Litematica(M+C) | - |
 | M + Button_3(鼠标中间按钮) | 选择方块开关 | Litematica(M+C) | - |
 | N | 大地图 | XaerosWorldMap((ModMenu)) | 小地图设置可以在大地图左上角里找到 |
-| O + C | OMMC配置界面 | Oh My Minecraft(ModMenu) Client(O+C) | - |
+| O + C | OMMC配置界面 | Oh My Minecraft Client(O+C) | - |
 | P | 清空Pistorder(-)显示 | Pistorder(-) | - |
 | Q + Button_1(鼠标左按钮) | 就扔一个 | Item Scroller(I+C) | - |
-| R | 整理仓库 | Oh My Minecraft(ModMenu) Client(O+C) | - |
+| R | 整理仓库 | Oh My Minecraft Client(O+C) | - |
 | R+C | 额外玩家渲染配置界面 | ExtraPlayerRenderer(R+C) | - |
 | S + Button_1(鼠标左按钮) | 就下移一个 | Item Scroller(I+C) | - |
 | S + Button_2(鼠标右按钮) | 就移一个S | Item Scroller(I+C) | - |
